# efm32-base

./: .gitignore  CMakeLists.txt
emdrv/: CMakeLists.txt
protocol/: CMakeLists.txt
protocol/bluetooth/ble_stack/inc/soc/: native_gecko.h
rs_source/: Cargo.toml  main.rs
rs_source/src/: bg_malloc.rs  bindings.rs  handlers.rs  lib.rs  rs_main.rs  state.rs
rs_source/src/coru/: executor.rs  fib.rs  mod.rs  tick_waiter.rs  waiter.rs  waker.rs
source/: bgmdevice.cpp  bgmdevice.h  bootloader_entry.s  common_alloc.cpp  formula.cpp  formula.hpp  gatt_db.c  gatt_db.h  globals.c  globals.h  i2ccomponent.cpp  i2ccomponent.h  i2cdevice.cpp  i2cdevice.h  i2cdriver.cpp  i2cdriver.h  i2csequence.cpp  i2csequence.h  i2cspmconfig.h  leddriver.cpp  leddriver.h  main.c  main.cpp  randomnumgen.cpp  randomnumgen.hpp  types.h
