[package]
name = "rs_source"
version = "0.1.0"
authors = ["1BADragon <6611786+MattBrownCA@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target="thumbv7m-none-eabi"

[build-dependencies]
bindgen = "0.54.0"

[dependencies]
libc = "0.2.70"

[lib]
name = "rs_source"
crate-type = ['staticlib']
